--- a/product-client-deployment/packaging/server/application/jboss/wildfly/WEB-INF/web.xml
+++ b/product-client-deployment/packaging/server/application/jboss/wildfly/WEB-INF/web.xml
@@ -7,31 +7,40 @@
 	<display-name>product Client</display-name>
 	
 	<context-param>
-		<description>The theme class</description>
-		<param-name>cyk.user.interface.theme.class.name</param-name>
-		<param-value>${web.context.parameter.theme.class.value}</param-value>
+		<param-name>cyk.context.parameter.theme.class.name</param-name>
+		<param-value>${cyk.context.parameter.theme.class.name}</param-value>
 	</context-param>
 	
 	<context-param>
-		<description>The theme identifier</description>
-		<param-name>${web.context.parameter.theme.identifier.name}</param-name>
-		<param-value>${web.context.parameter.theme.identifier.value}</param-value>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>${cyk.context.parameter.theme.primefaces}</param-value>
+	</context-param>
+	
+	<!-- Static resources -->
+	
+	<!-- Favicon -->
+	<!--
+	<context-param>
+		<param-name>cyk.context.parameter.theme.favicon.file.resources.folder</param-name>
+		<param-value>${cyk.context.parameter.theme.favicon.file.resources.folder}</param-value>
+	</context-param>
+	-->
+	<context-param>
+		<param-name>cyk.context.parameter.theme.favicon.file.folder</param-name>
+		<param-value>${cyk.context.parameter.theme.favicon.file.folder}</param-value>
 	</context-param>
 	
 	<context-param>
-		<param-name>web.context.parameter.theme.favicon.file.folder</param-name>
-		<param-value>${web.context.parameter.theme.favicon.file.folder}</param-value>
+		<param-name>cyk.context.parameter.theme.favicon.file.name.prefix</param-name>
+		<param-value>${cyk.context.parameter.theme.favicon.file.name.prefix}</param-value>
 	</context-param>
 	
 	<context-param>
-		<param-name>web.context.parameter.theme.favicon.file.name.prefix</param-name>
-		<param-value>${web.context.parameter.theme.favicon.file.name.prefix}</param-value>
+		<param-name>cyk.context.parameter.theme.favicon.file.name.extension</param-name>
+		<param-value>${cyk.context.parameter.theme.favicon.file.name.extension}</param-value>
 	</context-param>
 	
-	<context-param>
-		<param-name>web.context.parameter.theme.favicon.file.name.extension</param-name>
-		<param-value>${web.context.parameter.theme.favicon.file.name.extension}</param-value>
-	</context-param>
+	<!-- Logo -->
 	
 	<context-param>
 		<param-name>cyk.context.parameter.theme.logo.file.resources.folder</param-name>
@@ -52,6 +61,24 @@
 		<param-name>cyk.context.parameter.theme.logo.file.name.extension</param-name>
 		<param-value>${cyk.context.parameter.theme.logo.file.name.extension}</param-value>
 	</context-param>
+	
+	<!-- Logo : Use icon to show as logo. WHY Icon and Logo would be different ??? -->
+	<!--
+	<context-param>
+		<param-name>cyk.context.parameter.theme.logo.file.folder</param-name>
+		<param-value>${cyk.context.parameter.theme.logo.file.folder}</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>cyk.context.parameter.theme.logo.file.name.prefix</param-name>
+		<param-value>${cyk.context.parameter.theme.logo.file.name.prefix}</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>cyk.context.parameter.theme.logo.file.name.extension</param-name>
+		<param-value>${cyk.context.parameter.theme.logo.file.name.extension}</param-value>
+	</context-param>
+	-->	
 	
 	<!-- Security -->
 	<!--
